--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
@@ -67,7 +67,7 @@
 
                             <div class="form-button mt-3">
                                 <button id="submit" type="submit" class="btn btn-warning">Register</button>
-                                <a href="/table.html"class="btn btn-primary float-right" role="button">Employee List</a>
+                                <a href="table.html"class="btn btn-primary float-right" role="button">Employee List</a>
                             </div>
                                                    
                         </form>
@@ -77,7 +77,7 @@
         </div>
     </div>
 
-    <script src="/validate.js"></script>
+    <script src="validate.js"></script>
 
      <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
