--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
+
+<!-- Form for employee infomation -->
 <body>
     <div class="form-body">
         <div class="row">
@@ -16,34 +19,39 @@
                     <div class="form-items">
                         <h3>New  Hire</h3>
                         <p>Fill in the data below.</p>
+
+                        <!-- HTTP REQUEST -->
                         <form method="get" class="requires-validation" novalidate>
 
+                            <!-- Personal ID Section -->
                             <div class="col-12">
                                 <input class="form-control" type="number" name="personal_id" placeholder="Personal Identification" required>
                                 <div class="valid-feedback">Personal Identification field is valid!</div>
                                 <div class="invalid-feedback">Personal Identification cannot be blank!</div>
                              </div>
  
-
+                            <!-- First Name Section -->
                             <div class="col-12">
                                <input class="form-control" type="text" name="first_name" placeholder="First Name" required>
                                <div class="valid-feedback">First name field is valid!</div>
                                <div class="invalid-feedback">First name field cannot be blank!</div>
                             </div>
 
+                            <!-- Last Name Section -->
                             <div class="col-12">
                                 <input class="form-control" type="text" name="last_name" placeholder="Last Name" required>
                                 <div class="valid-feedback">Last name field is valid!</div>
                                 <div class="invalid-feedback">Last name field cannot be blank!</div>
                              </div>
  
-
+                             <!-- Email Section -->
                             <div class="col-12">
                                 <input class="form-control" type="email" name="email_address" placeholder="E-mail Address" required>
                                  <div class="valid-feedback">Email field is valid!</div>
                                  <div class="invalid-feedback">Email field cannot be blank!</div>
                             </div>
 
+                            <!-- Positions Section -->
                            <div class="col-12">
                                 <select class="form-select mt-3" required>
                                       <option selected disabled value="">Position</option>
@@ -56,7 +64,7 @@
                                 <div class="invalid-feedback">Please select a position!</div>
                            </div>
 
-
+                           <!-- Hired date Section -->
                            <div class="col-12">
                                 <label for="col-12">Hired Date</label>
                                 <input type="date" class="form-control" name="date" required />                              
@@ -64,7 +72,7 @@
                                 <div class="invalid-feedback">Date field cannot be in furture!</div>
                            </div>
                   
-
+                           <!-- Button Section -->
                             <div class="form-button mt-3">
                                 <button id="submit" type="submit" class="btn btn-warning">Register</button>
                                 <a href="table.html"class="btn btn-primary float-right" role="button">Employee List</a>
@@ -77,6 +85,7 @@
         </div>
     </div>
 
+    <!-- Script for validation class -->
     <script src="validate.js"></script>
 
      <!-- jQuery first, then Popper.js, then Bootstrap JS -->
